[project]
name = "mcp-lk-print-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.15.0",
    "requests>=2.32.5",
]


[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true
